name:                amqp-conduit
version:             0.1.0
synopsis:            Conduit interface for Network.AMQP
license:             BSD3
license-file:        LICENSE

author:              Brendan Hay <brendan@soundcloud.com>
maintainer:          Brendan Hay <brendan@soundcloud.com>
homepage:            http://github.com/brendanhay/amqp-conduit

category:            Network
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:

library
  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:    base >= 4.3 && < 5
                  , split
                  , bytestring
                  , uri
                  , conduit
                  , resourcet
                  , amqp
